--- a/css/main.css
+++ b/css/main.css
@@ -154,3 +154,76 @@ h1 {
         opacity: 0;
     }
 }
+
+
+.gallery__item {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .gallery__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.589);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 1; 
+  }
+  
+  .gallery__icon,
+  .gallery__title {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 2;
+  }
+  
+  .gallery__icon {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* background-color: #ff9900; */
+    color: white;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+  }
+  
+  .gallery__title {
+    bottom: -10rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #ff9900;
+    color: white;
+    padding: 0.4rem 0.6rem;
+    border-radius: 0.25rem;
+    text-align: center;
+    font-size: 12px;
+    transition: all 0.3s ease;
+  }
+  
+  .gallery__item:hover::before {
+    opacity: 1; /* Show shading on hover */
+  }
+  
+  .gallery__item:hover .gallery__icon,
+  .gallery__item:hover .gallery__title {
+    opacity: 1; /* Show icon and title on hover */
+  }
+  
+  .gallery__item:hover .gallery__title {
+    bottom: 1.3rem; /* Move title up on hover */
+  }
+  
+  .gallery__title::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 0.25rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
